--- a/lottieanimation.html
+++ b/lottieanimation.html
@@ -10,7 +10,7 @@
         renderer: 'svg',
         loop: true,
         autoplay: true,
-        path: 'https://example.com/my_animation.json'
+        path: 'https://raw.githubusercontent.com/quenangm/digiwave/main/118373-digital-marketing.json'
       });
     </script>
   </body>
